Agrego material de IS2, SO2 y Complementos 2

--- a/3 Ano/Probabilidad y Estadistica/Soluciones/TP2/TP Markov.lyx
+++ b/3 Ano/Probabilidad y Estadistica/Soluciones/TP2/TP Markov.lyx
@@ -1802,7 +1802,7 @@ c(1, 0, 0, 0) %*% (P %^% 6)
 \begin_layout Standard
 \begin_inset Formula 
 \[
-\boxed{\begin{pmatrix}0,0002 & 0,0461 & 0,4409 & \boldsymbol{0,5126<}\end{pmatrix}}
+\boxed{\begin{pmatrix}0,0002 & 0,0461 & 0,4409 & \boldsymbol{0,5126}\end{pmatrix}}
 \]
 
 \end_inset
